--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,5 +124,6 @@
   "hotelBookingComingSoon": "Hotel booking Coming Soon",
   "onlineTravelBooking": "Online travel booking coming soon",
   "stayWith": "Stay with",
-  "travelWith": "Travel with"
+  "travelWith": "Travel with",
+  "logout": "Logout"
 }
