--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -124,5 +124,6 @@
   "hotelBookingComingSoon": "Rezervare hotelieră în curând",
   "onlineTravelBooking": "Rezervarea online a călătoriilor va fi disponibilă în curând",
   "stayWith": "Stai cu",
-  "travelWith": "Călătorește cu"
+  "travelWith": "Călătorește cu",
+  "logout": "Deconectare"
 }
