--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -114,6 +114,7 @@
   "termsOfUse": "Terms Of Use",
   "and": "and",
   "signInHere": "Sign In here",
+  "signIn": "Sign In",
   "forgotPassword_forgot": "Forgot Password",
   "enterYourEmailToReceive": "Enter your email to receive a password reset link",
   "emailPasswordResetLink": "Email Password Reset Link",
