--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -114,6 +114,7 @@
   "termsOfUse": "Termenii de utilizare",
   "and": "și",
   "signInHere": "Autentifică-te aici",
+  "signIn": "Autentifică-te",
   "forgotPassword_forgot": "Parolă uitată",
   "enterYourEmailToReceive": "Introduceți emailul pentru a primi un link de resetare a parolei",
   "emailPasswordResetLink": "Trimite linkul de resetare a parolei",
